<resources>
    <string name="app_name">云互救</string>
    <string name="previous_page">上一页</string>
    <string name="start">现在开始体验</string>
    <string name="set_connect">设置联系人</string>
    <string name="set_connect_over">设置联系人完成以后</string>
    <string name="ues_help_1">点击此按钮添加求救联系人</string>
    <string name="ues_help_2">点击此按钮调用手机通讯录</string>
    <string name="ues_help_3">表明求救时可以向该联系人发送短信</string>
    <string name="ues_help_4">表明求救时可以像该联系人快速拨打电话</string>
    <string name="ues_help_5">表明可以向该联系人拨打电话并发送求救短信</string>
    <string name="ues_help_6">普通求救:长按该按钮1秒可以开始求救</string>
    <string name="ues_help_7">遇到危险快速求救</string>
    <string name="ues_help_8">遇到危险时，连续多次按下音量键(至少六次)知道手机震动，即可快速求救。请确保新号通畅且不欠费。</string>
    <string name="ues_help_9">GPS获取当前位置+求助信息+IMEI码</string>
    <string name="ues_help_10">发出的求救信息由三部分组成，分为用户设置的求救信息+当前位置+IMEI码，联系人可以通过获取的IMIE码在该app中获取求救者求救后的运动轨迹</string>
    <string name="ues_help_11">全民参与周边救援</string>
    <string name="ues_help_12">联系人可以通过获取的IMEI码获取求救者求救后的运动轨迹(求救者取消求救后轨迹自动消失)，周边的人也能够查到周边求助者的运动轨迹，方便更多人获悉求救者位置，便于求救。</string>
    <string name="ues_help_13">只有当app的快捷求助开关开启时才能在不打开云互助的情况下任何时候都能通过“快速点击关机键6下”的方式求救。因此望贵用户能够时刻把快捷求救功能开启。</string>
    <string name="ues_help_14">亲，想测试此app效果又怕发出求救怎么办？\n将本机设置求救联系人就没问题啦！！</string>
    <string name="help">求救</string>
    <string name="nearboard">周边</string>
    <string name="quick_help">快捷求救</string>
    <string name="tb_connact">联系人</string>
    <string name="example_name">小王</string>
    <string name="example_tel">18883992472</string>
    <string name="tel">手机：</string>
    <string name="name">姓名：</string>
    <string name="spark_model">触发方式：</string>
    <string name="sms">短信</string>
    <string name="example_sms">您好，我现在可能遇到了危险,现在不方便打电话，如果10分钟内我没联系你，请你帮助我！</string>
    <string name="tb_setting">设置</string>
    <string name="is_quick_help">开启快捷求救</string>
    <string name="use_instruction">使用帮助</string>
    <string name="share_app">分享应用</string>
    <string name="head">头像：</string>
    <string name="delete">删除</string>
    <string name="key_kisoo">f872c1636edbccc095129fb09bb20432</string>
    <string name="key_gan">887409363d256da6a39fa07c2d316909</string>
    <string name="key_yu">66cf1a94b6ec788fcbe0d9b2ff9797fe</string>
</resources>
